Changes with Apache 1.3.23

  *) NetWare: Fixed the access forbidden problem when requesting an
     empty directory rather than showing the empty listing.  
     [Charles Goldman, Guenter Knauf <gk@gknw.de>]

  *) Cause Win32 to capture all child-worker process errors in
     Apache to the main server error log, until the child can
     open it's own error logs.  [William Rowe]

  *) Revert mod_negotation's handling of path_info and query_args
     to the 1.3.20 behavior.  PR: 8628, 8582, 8538  [William Rowe]

  *) Modify buff.h and buff.c to enable modules to intercept the
     output byte stream for dynamic page caching. A pointer to a 
     'filter callback' function is added to the end of buff.h. 
     This function, if registered by a module, is called 
     at the top of buff_write() and writev_it_all().
     [Kevin Mallory <kmallory@spidercache.com>]

  *) When the default of 'Group #-1' was changed to 'Group "#-1"',
     the Makefile wasn't updated to recognise the quotation marks.
     [Owen Boyle <obo@bourse.ch>]

  *) Win32: Do not allow threads to continue handling keepalive
     requests after a shutdown or restart has ben signaled.
     [Bill Stoddard]

  *) Win32: Accept OPTIONS * requests.  [Keith Wannamaker]

  *) Unixware 7.0 and later did not have a default locking
     mechanism defined.  This bug was introduced in apache 1.3.4.
     [Dean Gaudet]

  *) Prevent an Apache module from being loaded or added twice due
     to duplicate LoadModule or AddModule directives (or a missing
     ClearModuleList directive).
     [William Rowe, Brian Pane <bpane@pacbell.net>]

  *) Add checkgid app to do run-time validation of Group directive
     values which might cause the server to fall over, but which
     are syntactically correct.  [Ken Coar]

  *) NetWare: Added mod_unique_id to the project file.  
     [Brad Nicholes bnicholes@novell.com]

  *) NetWare: Fixed a link problem with mod_vhost_alias so that it